[package]
name = "imgrex"
version = "0.0.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.40", features = ["derive"] }
serde = { version = "1.0.219", features = ["derive"] }
regex = "1.11.1"
walkdir = "2.5.0"
toml = "0.8.23"
anyhow = "1.0.98"
image = "0.25.6"
rayon = "1.10.0"
indicatif = "0.17.11"
calamine = "0.28.0"
csv = "1.3.1"

[dev-dependencies]
tempfile = "3.10.1"
